# enzoportf

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  README.md  diesel.toml
backend/src/: main.rs  models.rs  schema.rs
frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
frontend/src/: main.rs
src/: db.rs  main.rs  models.rs  schema.rs
