[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr", "default"]}
wasm-bindgen-futures = {  version = "0.4.42"}
serde = { version = "1.0.205", features = ["derive"] }
serde_json = { version = "1.0.122"}
wasm-logger = "0.2.0"
log = { version = "0.4.22", features = [] }
reqwasm = { version = "0.5.0", features = ["http"]}
web-sys = { version = "0.3.69" }
reqwest = { version = "0.12.5", features = ["json"] }